[package]
name = "esp-interstellar-clock"
version = "0.1.0"
authors = ["allansomensi <allansomensidev@gmail.com>"]
description = "A clock/lamp built with ESP32, using Rust and the esp-idf framework. It connects to Wi-Fi to synchronize time via SNTP."
homepage = "https://github.com/allansomensi/esp-interstellar-clock"
repository = "https://github.com/allansomensi/esp-interstellar-clock"
readme = "README.md"
keywords = ["esp32", "esp-idf", "embedded", "http-server", "wifi", "sntp"]
license = "MIT"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-interstellar-clock"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
heapless = "0.8.0"
tm1637 = "0.1.0"
chrono = "0.4.39"
chrono-tz = "0.10.1"
thiserror = "2.0.11"

[build-dependencies]
embuild = "0.33"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "run-for-all",
    "prepush-hook",
    "precommit-hook",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
